SERVER-82197 Handle collation in KeyString in case of Object/array